# ROS2_Practice_UninaCorse_AS

./: README.md  Risposte_EX1  Risposte_EX2
ex1_ws/install/: setup.sh
ex1_ws/install/sysmon_trigger_cpp/lib/sysmon_trigger_cpp/: system_triggered_publisher
ex1_ws/install/sysmon_trigger_cpp/share/sysmon_trigger_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.zsh
ex1_ws/install/sysmonitor_interfaces/share/sysmonitor_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1
ex1_ws/install/sysmonitor_interfaces/share/sysmonitor_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_sysmonitor_interfaces__rosidl_generator_cExport-noconfig.cmake  (+3 more)
ex1_ws/log/: latest_build
ex1_ws/src/EX1/rosbag2_2024_11_22-00_32_31/: metadata.yaml
ex1_ws/src/EX1/sysmonitor_interfaces/: package.xml
ex1_ws/src/sysmon_trigger_cpp/: package.xml
ex1_ws/src/sysmon_trigger_cpp/src/: system_triggered_publisher.cpp
ex1_ws/src/sysmon_trigger_cpp/src/install/: setup.ps1  setup.sh
ex2_ws/install/: local_setup.sh  setup.sh
ex2_ws/install/fault_detection/lib/fault_detection/: challenge2
ex2_ws/install/fault_detection/share/fault_detection/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ex2_ws/install/sysmonitor_interfaces/share/sysmonitor_interfaces/: package.sh  package.zsh
ex2_ws/log/: latest_build
ex2_ws/src/EX2/fault_detection/: CMakeLists.txt  package.xml
ex2_ws/src/EX2/fault_detection/include/fault_detection/: magiclib.h
ex2_ws/src/EX2/fault_detection/src/: main.cpp
ex2_ws/src/EX2/rosbag2_2024_11_27-15_00_23/: metadata.yaml  rosbag2_2024_11_27-15_00_23_0.db3
ex2_ws/src/EX2/sysmonitor_interfaces/: CMakeLists.txt
ros2_ws/install/: local_setup.sh
ros2_ws/install/sysmon_trigger_cpp/share/sysmon_trigger_cpp/: package.sh
ros2_ws/install/sysmonitor_interfaces/share/sysmonitor_interfaces/: local_setup.sh  package.sh
ros2_ws/src/sysmon_trigger_cpp/: CMakeLists.txt
ros2_ws/src/sysmon_trigger_cpp/src/install/: local_setup.sh  setup.bash  setup.zsh
ros2_ws/src/sysmon_trigger_cpp/src/log/: latest_build
(+23 files in other folders)
