cmake_minimum_required(VERSION 3.8)
project(fault_detection)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sysmonitor_interfaces REQUIRED) #aggiunto

include_directories(include)

add_executable(challenge2 src/main.cpp)

target_link_libraries(challenge2 ${CMAKE_SOURCE_DIR}/lib/libmagicLib.a)
ament_target_dependencies (challenge2 rclcpp std_msgs sysmonitor_interfaces)

install(TARGETS
  challenge2
  DESTINATION lib/${PROJECT_NAME})

  
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
